Fixed overlap for small display
"back to top" was hiding under footer

--- a/Templates/rawhtml/Project2/css/global.css
+++ b/Templates/rawhtml/Project2/css/global.css
@@ -5,6 +5,7 @@
 
 .to-top {
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .header {
